2007-03-10  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-ssh.c:
    * agent/seahorse-agent-status.c:
    * agent/seahorse-agent.c:
    * agent/seahorse-agent.h: Fix problem where processes launched from 
    seahorse-agent didn't get proper environment. Fixes bug #415808

2007-03-06  Adam Schreiber  <sadam@clemson.edu>

    * plugins/nautilus/seahorse-pgp-preferences.desktop.in:
    * src/seahorse.desktop.in.in: Remove Application from categories and
    make sure we are providing valid desktop files.  (GNOME Goal)

2007-03-02  Adam Schreiber  <sadam@clemson.edu>

    * plugins/applet/seahorse-applet.c: Fix localization.
    Patches from Nickolay V. Shmyrev.  Fixes bug #408774 #414078

2007-02-26  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/Makefile.am: Fixes building on multiple cores.
    Patch from Gilles Dartiguelongue.  Fixes bug #411834

=== seahorse-0.9.92 ===

2007-02-24  Nate Nielsen  <nielsen@memberwebs.com>

    * NEWS:
    * README: Version 0.9.92

2007-02-20  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-delete.c:
    * src/seahorse-keyserver-results.c:
    * src/seahorse-key-manager.c:
    * plugins/nautilus/seahorse-tool.c: Fix ngettext usage.  Patch from 
    Nickolay V. Shmyrev.  Fixes bug #408786


2007-02-20  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-actions.c: Fix crash when using GPG2
    Patch from Sebastian Dröge. Fixes bug #410193

2007-02-18  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-delete.c:
    * src/seahorse-add-uid.c:
    * src/seahorse-ssh-key-properties.c:
    * src/seahorse-add-subkey.c:
    * src/seahorse-gkeyring-item-properties.c:
    * src/seahorse-ssh-upload.c:
    * src/seahorse-expires.c:
    * src/seahorse-key-properties.c:
    * src/seahorse-revoke.c:
    * src/seahorse-keyserver-sync.c:
    * plugins/nautilus/Makefile.am:
    * plugins/nautilus/seahorse-pgp-preferences.c:
    * plugins/gedit/seahorse-gedit.c:
    * plugins/gedit/Makefile.am: