@@ -1,3 +1,8 @@
+2007-03-11  Adam Schreiber  <sadam@clemson.edu>
+
+    * src/seahorse-key-manager.c: Fix crash with empty clipboard paste.
+    Fixes 417207.
+    
 2007-03-10  Nate Nielsen  <nielsen@memberwebs.com>
 
     * agent/seahorse-agent-ssh.c:
